@@ -165,6 +165,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Oracle 11i             Simon Redhead
 - Oxygene (Delphi Prism) Carlo Kok
 - Oz                     Wolfgang Meyer
+- PARI/GP                Charles R Greathouse IV
 - Pascal                 Tux
 - PCRE                   Benny Baumann
 - Perl                   Andreas Gohr, Ben Keen
